# LFramework

./: CMakeLists.txt  LFramework.pri  README.md
Src/LFramework/: Assert.h  BitField.h  BitFieldTest.cpp  CMakeLists.txt  Debug.h  Guid.h  GuidUtils.cpp  GuidUtils.h  Syscalls.cpp  System.h  SystemArmCortexM.h  SystemWindows.h  TupleUtils.h
Src/LFramework/COM/: CMakeLists.txt  ComLibrary.h  ComObject.h
Src/LFramework/Containers/: ByteFifo.h  CMakeLists.txt  LinkedList.h  StaticVector.h
Src/LFramework/Detect/: CMakeLists.txt  DetectCPU.h  DetectEndianness.h  DetectOS.h
Src/LFramework/DeviceNetwork/: IDataReceiver.h  NetworkAddress.h  NetworkInterface.h  Node.h  Packet.h  Router.h  TaskManager.h
Src/LFramework/DeviceNetwork/Device/: ITaskContext.h  UsbTransmitter.h
Src/LFramework/DeviceNetwork/Host/: Host.cpp  Host.h  Network.h  UsbTransmitter.h
Src/LFramework/IO/: CMakeLists.txt  Stream.h  StreamWriter.cpp  StreamWriter.h
Src/LFramework/IO/Terminal/: CMakeLists.txt  Terminal.cpp  Terminal.h  TerminalAnsi.h  TerminalStream.h  TerminalStreamCout.cpp  TerminalStreamUartStm32.cpp
Src/LFramework/Input/: CMakeLists.txt  Input.cpp  Input.h  Keyboard.cpp  Keyboard.h  KeysStateManager.h  Mouse.cpp  Mouse.h
Src/LFramework/MCU/: CMakeLists.txt  Mcu.h
Src/LFramework/MCU/DMA/: CMakeLists.txt  DMA.h
Src/LFramework/MCU/USBDevice/: CMakeLists.txt
Src/LFramework/MCU/USBDevice/PHY/: CMakeLists.txt  Stm32FsPhy.h  UsbDeviceSoftPhy.h  UsbInternalFsDeviceDriver.h
Src/LFramework/MCU/stm32/: CMakeLists.txt  HalLibrary.h  HardFaultHandler.cpp  HardFaultHandler.h
Src/LFramework/Macro/: CMakeLists.txt  ForEach.h
Src/LFramework/Reflection/: CMakeLists.txt  Reflection.h
Src/LFramework/Text/: Encoding.h
Src/LFramework/Thread/: Semaphore.h  SemaphoreStd.h  SemaphoreStdTest.cpp  Thread.cpp  Thread.h  ThreadFreeRTOS.h  ThreadPlatform.h  ThreadStd.h  ThreadTest.cpp
Src/LFramework/Threading/: CMakeLists.txt  CriticalSection.h  CriticalSectionFreeRTOS.h  CriticalSectionStd.cpp  CriticalSectionStd.h  Semaphore.h  SemaphoreFreeRTOS.h  SemaphoreStd.h  Thread.cpp  Thread.h  ThreadFreeRTOS.h  ThreadPlatform.h  ThreadStd.h  ThreadTest.cpp
Src/LFramework/Time/: CMakeLists.txt  Stopwatch.h
Src/LFramework/TypeTraits/: CMakeLists.txt  FunctionTraits.h  Integral.h
Src/LFramework/USB/: CMakeLists.txt  USBDevice_Deprecated.h  USBTypes.h  USBTypesTest.cpp  UsbEndpoint.h  UsbException.h  UsbInterface.h  UsbMicrosoftTypes.h  UsbPollingTransfer.h  UsbTransfer.h  usbd_conf.h
Src/LFramework/USB/Device/: CMakeLists.txt  USBDDevice.cpp  USBDevice.cpp  USBDevice.h  UsbDBulkInterface.h  UsbDDevice.h  UsbDDeviceCallbacks.cpp  UsbDDeviceContext.h  UsbDEndpoint.cpp  UsbDEndpoint.h  UsbDInterface.h  UsbDLowLevel.cpp
Src/LFramework/USB/Host/: CMakeLists.txt  IUsbDevice.h  IUsbEndpoint.h  IUsbHostEndpoint.h  IUsbInterface.h  IUsbService.h  IUsbTransfer.h  USBHDevice.cpp  UsbException.h  UsbHDevice.h  UsbHEndpoint.h  UsbHException.h  UsbHostManager.cpp  UsbHostManager.h  UsbNotifyWindow.h  UsbService.cpp  UsbService.h
Src/LFramework/USB/Host/Linux/: NetlinkClient.cpp  NetlinkClient.h  NetlinkReader.h  SysfsUtils.h  UsbBulkTransfer.h  UsbDevice.cpp  UsbDevice.h  UsbHostEndpoint.cpp  UsbHostEndpoint.h  UsbInterface.h  UsbIoctl.h  UsbService.cpp  UsbService.h
Src/LFramework/USB/Host/Windows/: USBHDevice.cpp  UsbHDevice.h  UsbHEndpoint.h  UsbHException.h  UsbHInterface.h  UsbHostEndpoint.h  UsbHostManager.cpp  UsbHostManager.h  UsbNotifyWindow.h  UsbService.cpp  UsbService.h
Src/LFramework/UnitTest/: CMakeLists.txt  UnitTest.cpp  UnitTest.h
